[package]
name = "new-mpsc"
version = "0.0.0"
authors = ["Stjepan Glavina <stjepang@gmail.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/stjepang/new-mpsc"
homepage = "https://github.com/stjepang/new-mpsc"
documentation = "https://docs.rs/new-mpsc"
description = "New mpsc channels"
keywords = ["channel", "mpsc"]
categories = ["algorithms", "concurrency", "data-structures"]

[dev-dependencies]
crossbeam-utils = "0.6.5"
rand = "0.6"
