[package]
name = "new-channel"
version = "0.0.0"
authors = ["Stjepan Glavina <stjepang@gmail.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/stjepang/new-channel"
homepage = "https://github.com/stjepang/new-channel"
documentation = "https://docs.rs/new-channel"
description = "Proposed new channels for Rust's standard library"
keywords = ["channel"]
categories = ["algorithms", "concurrency", "data-structures"]

[dev-dependencies]
crossbeam-utils = "0.6.5"
num_cpus = "1.10.0"
rand = "0.6"
